{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 15,
  "lineage": "fa1d21da-dd25-551a-8106-7bb7c478dd95",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main_vpc_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb94ca03532fe8a3",
            "arn": "arn:aws:ec2:us-east-1:487337210283:elastic-ip/eipalloc-0bb94ca03532fe8a3",
            "domain": "vpc",
            "id": "eipalloc-0bb94ca03532fe8a3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-13-219-188-84.compute-1.amazonaws.com",
            "public_ip": "13.219.188.84",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "MAIN-VPC-NAT-EIP"
            },
            "tags_all": {
              "Name": "MAIN-VPC-NAT-EIP"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "eipalloc-0bb94ca03532fe8a3",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487337210283:internet-gateway/igw-0d48c817e1e30cff2",
            "id": "igw-0d48c817e1e30cff2",
            "owner_id": "487337210283",
            "region": "us-east-1",
            "tags": {
              "Name": "Main-VPC-IGW"
            },
            "tags_all": {
              "Name": "Main-VPC-IGW"
            },
            "vpc_id": "vpc-017ee90a67a0f02f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "igw-0d48c817e1e30cff2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_vpc_nat_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb94ca03532fe8a3",
            "association_id": "eipassoc-0acfae4c91dea9d30",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-00a1fd53ba3f99b78",
            "network_interface_id": "eni-0dca01945a3cc287d",
            "private_ip": "192.168.0.38",
            "public_ip": "13.219.188.84",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05850a9b2d365e62d",
            "vpc_id": "vpc-017ee90a67a0f02f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "nat-00a1fd53ba3f99b78",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.main_vpc_nat_eip",
            "module.vpc.aws_subnet.main_vpc_public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_vpc_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487337210283:route-table/rtb-0c8142c33ca9d687d",
            "id": "rtb-0c8142c33ca9d687d",
            "owner_id": "487337210283",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "MAIN-VPC-PRIVATE-ROUTE-TABLE"
            },
            "tags_all": {
              "Name": "MAIN-VPC-PRIVATE-ROUTE-TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-017ee90a67a0f02f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "rtb-0c8142c33ca9d687d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_vpc_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487337210283:route-table/rtb-0e37dbf46e8476d5a",
            "id": "rtb-0e37dbf46e8476d5a",
            "owner_id": "487337210283",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "MAIN-VPC-PUBLIC-ROUTE-TABLE"
            },
            "tags_all": {
              "Name": "MAIN-VPC-PUBLIC-ROUTE-TABLE"
            },
            "timeouts": null,
            "vpc_id": "vpc-017ee90a67a0f02f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "rtb-0e37dbf46e8476d5a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_vpc_private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015cccf74e1161451",
            "region": "us-east-1",
            "route_table_id": "rtb-0c8142c33ca9d687d",
            "subnet_id": "subnet-067fd7eed1b789ed4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "rtbassoc-015cccf74e1161451",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main_vpc_private_route_table",
            "module.vpc.aws_subnet.main_vpc_private_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_vpc_private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0120edf4a9413133d",
            "region": "us-east-1",
            "route_table_id": "rtb-0c8142c33ca9d687d",
            "subnet_id": "subnet-0fcc59e314da16d43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "rtbassoc-0120edf4a9413133d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main_vpc_private_route_table",
            "module.vpc.aws_subnet.main_vpc_private_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_vpc_public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092fd883a153d23b2",
            "region": "us-east-1",
            "route_table_id": "rtb-0e37dbf46e8476d5a",
            "subnet_id": "subnet-05850a9b2d365e62d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "rtbassoc-092fd883a153d23b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main_vpc_public_route_table",
            "module.vpc.aws_subnet.main_vpc_public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_vpc_public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c4b74159755e8b8",
            "region": "us-east-1",
            "route_table_id": "rtb-0e37dbf46e8476d5a",
            "subnet_id": "subnet-0d8956d482bbe88b4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "rtbassoc-05c4b74159755e8b8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main_vpc_public_route_table",
            "module.vpc.aws_subnet.main_vpc_public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_vpc_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487337210283:subnet/subnet-067fd7eed1b789ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067fd7eed1b789ed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487337210283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MAIN-VPC-PRIVATE-SUBNET-1"
            },
            "tags_all": {
              "Name": "MAIN-VPC-PRIVATE-SUBNET-1"
            },
            "vpc_id": "vpc-017ee90a67a0f02f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "subnet-067fd7eed1b789ed4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_vpc_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487337210283:subnet/subnet-0fcc59e314da16d43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcc59e314da16d43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487337210283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MAIN-VPC-PRIVATE-SUBNET-2"
            },
            "tags_all": {
              "Name": "MAIN-VPC-PRIVATE-SUBNET-2"
            },
            "vpc_id": "vpc-017ee90a67a0f02f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "subnet-0fcc59e314da16d43",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_vpc_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487337210283:subnet/subnet-05850a9b2d365e62d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05850a9b2d365e62d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487337210283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MAIN-VPC-PUBLIC-SUBNET-1"
            },
            "tags_all": {
              "Name": "MAIN-VPC-PUBLIC-SUBNET-1"
            },
            "vpc_id": "vpc-017ee90a67a0f02f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "subnet-05850a9b2d365e62d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_vpc_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487337210283:subnet/subnet-0d8956d482bbe88b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8956d482bbe88b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "487337210283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MAIN-VPC-PUBLIC-SUBNET-2"
            },
            "tags_all": {
              "Name": "MAIN-VPC-PUBLIC-SUBNET-2"
            },
            "vpc_id": "vpc-017ee90a67a0f02f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "subnet-0d8956d482bbe88b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:487337210283:vpc/vpc-017ee90a67a0f02f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-00f625653ba02d9c8",
            "default_route_table_id": "rtb-08b66ca101aab4db2",
            "default_security_group_id": "sg-019c5047a30c1c94b",
            "dhcp_options_id": "dopt-088744fde002cfc32",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017ee90a67a0f02f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b66ca101aab4db2",
            "owner_id": "487337210283",
            "region": "us-east-1",
            "tags": {
              "Name": "Default-VPC"
            },
            "tags_all": {
              "Name": "Default-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "487337210283",
            "id": "vpc-017ee90a67a0f02f5",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}